--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
 		"angular-in-memory-web-api": "^0.6.0",
 		"core-js": "^2.5.5",
 		"electron": "^2.0.0",
+		"rx-walk": "0.0.2",
 		"rxjs": "^6.1.0",
 		"walk": "^2.3.13",
 		"zone.js": "^0.8.26"
