--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
 		"core-js": "^2.5.5",
 		"electron": "^2.0.0",
 		"line-by-line": "^0.1.6",
+		"moment": "^2.22.1",
 		"open-in-editor": "^2.2.0",
 		"rx-walk": "0.0.2",
 		"rxjs": "^6.1.0",
